zero-schema-macros/tests/ui/fail/01_exact_grammar.stderr
error: unknown container zero option `unknown`
 --> tests/ui/fail/01_exact_grammar.rs:3:8
  |
3 | #[zero(unknown = "value")]
  |        ^^^^^^^
